fix(ui): title padding on small screens

--- a/frontend/theme/extras/blocks/imageCards.less
+++ b/frontend/theme/extras/blocks/imageCards.less
@@ -52,6 +52,11 @@
         padding-right: 70px;
         padding-left: 70px;
         margin: 0 !important;
+
+        @media (max-width: 662px) {
+          padding-right: 16px;
+          padding-left: 16px;
+        }
       }
       .slide-copyright > p,
       .slide-copyright > h2,
@@ -91,6 +96,11 @@
               background-color: @eventTagBackgroundColor;
             }
           }
+
+          @media (max-width: 662px) {
+            padding-left: 7px;
+            padding-right: 7px;
+          }
         }
         .hero.slide-title{
           margin-bottom: 0;
@@ -101,11 +111,17 @@
           padding: 0 20px;
           margin-top: 0;
           margin-bottom: 10px;
+          text-align: left;
 
           @media (max-width: 992px) {
             font-size: 39px;
             line-height: 34.32px;
             margin-top: 15px;
+          }
+
+          @media (max-width: 662px) {
+            padding-left: 7px;
+            padding-right: 7px;
           }
         }
         .hero.page.slide-title {
@@ -119,6 +135,11 @@
           letter-spacing: normal;
           -webkit-font-smoothing: auto;
           -moz-osx-font-smoothing: auto;
+
+          @media (max-width: 662px) {
+            padding-left: 7px;
+            padding-right: 7px;
+          }
         }
         .hero.slide-description{
           font-size: 22px;
